dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(irtsp, 0.1.00)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC










PKG_CHECK_MODULES(IRTSP, [json-glib-1.0 gobject-2.0 libipcam_base-0.1.0 ])




AC_OUTPUT([
Makefile
src/Makefile

])
