dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(irtsp, 0.1.00)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC

AC_PROG_CXX








PKG_CHECK_MODULES(IRTSP, [shm_queue-0.1.00 zlib json-glib-1.0 glib-2.0 gobject-2.0 gmodule-2.0 libzmq yaml-0.1 libczmq libipcam_base-0.1.0])




AC_OUTPUT([
Makefile
src/Makefile
src/config/Makefile

])
